# deskspace

./: .gitignore  CLAUDE.md  flake.nix
crates/deskspace/: Cargo.toml
crates/deskspace/src/: lib.rs  main.rs  projection.rs  registry.rs  workspace.rs
crates/deskspace/src/api/: files.rs  mod.rs
crates/deskspace/src/projections/: dir_list.rs  image_preview.rs  mod.rs  text_markdown.rs  text_raw.rs
docs/: package.json
ui/: app.js  index.html  package.json  style.css
